creusot/tests/should_fail/prusti/adt/tuple_zombie.stderr
error[creusot]: expected `(std::boxed::Box<u32>, std::boxed::Box<u32>)` found `(creusot_contracts::__stubs::__prusti::Zombie<std::boxed::Box<u32>>, std::boxed::Box<u32>)`
 --> tuple_zombie.rs:7:5
  |
7 |     (at_expiry::<'x>(x), y)
  |     ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

